[package]
name = "amber-aios"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = {version = "0.29", features = ["socket", "net"] }
serde = {version = "1.0", features = ["derive"]}
sized-writer = {git = "https://github.com/w-utter/sized-writer.git" }
serde_json = "1.0"
constcat = "0.5"
os_socketaddr = "0.2"
bincode = "1.3"
